# InvestRoundTable-Pro

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md  SPEC.md  config.py  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data_engine/: __init__.py  cache.py  fetcher.py  fundamental_data.py  schema.py  technical_indicators.py
debate_orchestrator/: __init__.py  aggregator.py  confidence_scorer.py  conflict_detector.py  cross_stage_conflict.py  orchestrator.py  stage1_debate.py  stage2_analysis.py  stage3_signals.py
docs/: 2026-05-23-technical-signal-roundtable-design.md  README.md  architecture.md
docs/internal/: 2026-05-23-technical-signal-roundtable-implementation-plan.md
examples/: AAPL_20260524_report.html  AAPL_20260524_report.md  ORCL_20260524_report.md
masters/: __init__.py  base_master.py  investment_master.py  registry.py  signal_master.py  technical_master.py
masters/skill_references/: industry-research.md
masters/skill_references/investment_masters/: cathie-wood-perspective.md  charlie-munger-perspective.md  dalio-perspective.md  duanyongping-perspective.md  fengliu-perspective.md  graham-perspective.md  howard-marks-perspective.md  lilu-perspective.md  linyuan-perspective.md  peterlynch-perspective.md  qiuguolu-perspective.md  soros-perspective.md  warren-buffett-perspective.md  zhanglei-perspective.md
masters/skill_references/signal_masters/: alexander-elder-signal-perspective.md  bill-williams-signal-perspective.md  donald-lambert-signal-perspective.md  george-lane-signal-perspective.md  gerald-appel-signal-perspective.md  goichi-hosoda-signal-perspective.md  john-bollinger-signal-perspective.md  joseph-granville-signal-perspective.md  larry-williams-signal-perspective.md  marc-chaikin-signal-perspective.md  welles-wilder-signal-perspective.md
masters/skill_references/technical_masters/: alexander-elder-perspective.md  charles-dow-perspective.md  george-lane-perspective.md  gerald-appel-perspective.md  japanese-sentiment-indicators-perspective.md  joseph-granville-perspective.md  larry-williams-perspective.md  ralph-elliott-perspective.md  richard-wyckoff-perspective.md  steve-nison-perspective.md  thomas-demark-perspective.md  welles-wilder-perspective.md
report_generator/: __init__.py  chart_renderer.py  html_report.py  markdown_report.py
tests/: test_smoke.py
web_app/: app.py
web_app/templates/: index.html
