[project]
name = "investment-masters-roundtable"
version = "1.0.0"
description = "31位投资大师三阶段圆桌辩论系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lucas Yan"},
]
keywords = ["investment", "technical-analysis", "llm", "ai", "stock-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "yfinance>=0.2.40",
    "akshare>=1.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
pandas-ta = ["pandas-ta>=0.3.14b"]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
roundtable = "run:main"

[project.urls]
Homepage = "https://github.com/yourusername/investment-masters-roundtable"
Repository = "https://github.com/yourusername/investment-masters-roundtable"
Issues = "https://github.com/yourusername/investment-masters-roundtable/issues"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
