[project]
name = "investment-masters-roundtable"
version = "1.0.0"
description = "37 AI-powered investment masters debate your stock picks across 3 stages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Lucas Yan", email = "lucasyan@example.com"},
]
keywords = [
    "investment", "stock-analysis", "technical-analysis",
    "llm", "ai", "debate", "multi-agent", "quantitative",
    "value-investing", "trading-signals",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "yfinance>=0.2.40",
    "akshare>=1.14.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "mplfinance>=0.12.10b0",
    "matplotlib>=3.8.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4.0"]

[project.scripts]
roundtable = "run:main"

[project.urls]
Homepage = "https://github.com/LucasYanzy/investment-masters-roundtable"
Repository = "https://github.com/LucasYanzy/investment-masters-roundtable"
Issues = "https://github.com/LucasYanzy/investment-masters-roundtable/issues"
Changelog = "https://github.com/LucasYanzy/investment-masters-roundtable/blob/main/CHANGELOG.md"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["data_engine", "masters", "debate_orchestrator", "report_generator", "web_app", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
